--- a/orbitv7.html
+++ b/orbitv7.html
@@ -15,13 +15,82 @@
       window.SUPABASE_URL = 'https://cohjxujvdfbsohhlvnus.supabase.co';
       window.SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNvaGp4dWp2ZGZic29oaGx2bnVzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQxNTAyNTcsImV4cCI6MjA3OTcyNjI1N30.FCmAi1McUKYV4y5tgBxKhY-Yku95JMu8-rtc2TJhdzs';
       
+      console.log('[Supabase Config] URL:', window.SUPABASE_URL);
+      console.log('[Supabase Config] Has Key:', !!window.SUPABASE_ANON_KEY);
+      
       // Try to load from external config file (fallback)
       if (!window.SUPABASE_URL || !window.SUPABASE_ANON_KEY) {
+        console.warn('[Supabase Config] Missing config, trying external file...');
         const configScript = document.createElement('script');
         configScript.src = './config.supabase.js';
         configScript.onerror = () => console.warn('[Supabase] config.supabase.js not found, using inline config');
         document.head.appendChild(configScript);
       }
+    </script>
+    <script>
+      // Initialize Supabase client IMMEDIATELY after config
+      (function initSupabase() {
+        // Wait for supabase library to load
+        if (typeof window.supabase === 'undefined') {
+          console.log('[Supabase Init] Waiting for supabase library...');
+          setTimeout(initSupabase, 100);
+          return;
+        }
+
+        try {
+          if (!window.SUPABASE_URL || !window.SUPABASE_ANON_KEY) {
+            console.error("[Supabase Init] Missing URL or Key", {
+              hasUrl: !!window.SUPABASE_URL,
+              hasKey: !!window.SUPABASE_ANON_KEY,
+              url: window.SUPABASE_URL,
+              keyLength: window.SUPABASE_ANON_KEY?.length
+            });
+            return;
+          }
+
+          const createClient = window.supabase?.createClient;
+          if (!createClient) {
+            console.error("[Supabase Init] createClient not found on window.supabase", {
+              hasSupabase: !!window.supabase,
+              supabaseKeys: window.supabase ? Object.keys(window.supabase) : []
+            });
+            return;
+          }
+
+          console.log("[Supabase Init] Creating client...", {
+            url: window.SUPABASE_URL,
+            hasKey: !!window.SUPABASE_ANON_KEY
+          });
+
+          window.supabaseClient = createClient(
+            window.SUPABASE_URL,
+            window.SUPABASE_ANON_KEY,
+          );
+
+          console.log("[Supabase Init] Client created successfully", {
+            hasClient: !!window.supabaseClient,
+            clientType: typeof window.supabaseClient
+          });
+
+          // Simple connectivity check
+          window.supabaseClient.auth.getSession().then(({ data, error }) => {
+            if (error) {
+              console.error("[Supabase Init] auth.getSession error:", error);
+            } else {
+              console.log("[Supabase Init] Session check OK", data);
+            }
+          }).catch(err => {
+            console.error("[Supabase Init] Session check exception:", err);
+          });
+
+          // Also initialize OrbitApi immediately
+          if (typeof window.OrbitApi === 'undefined' && typeof window.initOrbitApi === 'function') {
+            window.initOrbitApi();
+          }
+        } catch (e) {
+          console.error("[Supabase Init] Exception:", e);
+        }
+      })();
     </script>
     <script src="./services.supabase.js"></script>
     <!-- OpenAI config -->
@@ -40,41 +109,6 @@
       openaiScript.src = './config.openai.js';
       openaiScript.onerror = () => console.warn('[OpenAI] config.openai.js not found');
       document.head.appendChild(openaiScript);
-    </script>
-    <script>
-      // Initialize Supabase client (global)
-      try {
-        if (window.SUPABASE_URL && window.SUPABASE_ANON_KEY) {
-          const createClient = window.supabase && window.supabase.createClient;
-          if (!createClient) {
-            console.error(
-              "[Supabase] createClient not found on window.supabase",
-            );
-          } else {
-            window.supabaseClient = createClient(
-              window.SUPABASE_URL,
-              window.SUPABASE_ANON_KEY,
-            );
-            console.log("[Supabase] Client initialized", {
-              url: window.SUPABASE_URL,
-              hasKey: !!window.SUPABASE_ANON_KEY
-            });
-            // Simple connectivity check
-            window.supabaseClient.auth.getSession().then(({ data, error }) => {
-              if (error)
-                console.error("[Supabase] auth.getSession error:", error);
-              else console.log("[Supabase] Session check OK", data);
-            });
-          }
-        } else {
-          console.error("[Supabase] Missing URL or Key", {
-            hasUrl: !!window.SUPABASE_URL,
-            hasKey: !!window.SUPABASE_ANON_KEY
-          });
-        }
-      } catch (e) {
-        console.error("[Supabase] init failed", e);
-      }
     </script>
     <style>
       @keyframes progress {
