--- a/orbitv7.html
+++ b/orbitv7.html
@@ -92,6 +92,95 @@
         }
       })();
     </script>
+    <!-- ToastManager - Simple toast notification system -->
+    <script>
+      window.ToastManager = (function() {
+        const toasts = [];
+        let toastContainer = null;
+
+        function init() {
+          if (toastContainer) return;
+          toastContainer = document.createElement('div');
+          toastContainer.id = 'toast-container';
+          toastContainer.style.cssText = `
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            z-index: 10000;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            pointer-events: none;
+          `;
+          document.body.appendChild(toastContainer);
+        }
+
+        function getTypeStyles(type) {
+          const styles = {
+            success: { bg: '#A8E6CF', text: '#1D1D1F', icon: '✓' },
+            error: { bg: '#FFAAA5', text: '#1D1D1F', icon: '✕' },
+            warning: { bg: '#FFD580', text: '#1D1D1F', icon: '⚠' },
+            info: { bg: '#A7C7E7', text: '#1D1D1F', icon: 'ℹ' }
+          };
+          return styles[type] || styles.info;
+        }
+
+        function show(message, type = 'info', duration = 3000) {
+          init();
+          const toast = document.createElement('div');
+          const styles = getTypeStyles(type);
+          toast.style.cssText = `
+            background: ${styles.bg};
+            color: ${styles.text};
+            padding: 12px 16px;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            min-width: 200px;
+            max-width: 300px;
+            pointer-events: auto;
+            animation: slideIn 0.3s ease;
+            font-size: 14px;
+            font-weight: 500;
+          `;
+          toast.innerHTML = `<span>${styles.icon}</span><span>${message}</span>`;
+          
+          const style = document.createElement('style');
+          style.textContent = `
+            @keyframes slideIn {
+              from { transform: translateX(100%); opacity: 0; }
+              to { transform: translateX(0); opacity: 1; }
+            }
+            @keyframes slideOut {
+              from { transform: translateX(0); opacity: 1; }
+              to { transform: translateX(100%); opacity: 0; }
+            }
+          `;
+          if (!document.getElementById('toast-animations')) {
+            style.id = 'toast-animations';
+            document.head.appendChild(style);
+          }
+
+          toastContainer.appendChild(toast);
+          toasts.push(toast);
+
+          setTimeout(() => {
+            toast.style.animation = 'slideOut 0.3s ease';
+            setTimeout(() => {
+              if (toast.parentNode) {
+                toast.parentNode.removeChild(toast);
+              }
+              const index = toasts.indexOf(toast);
+              if (index > -1) toasts.splice(index, 1);
+            }, 300);
+          }, duration);
+        }
+
+        return { show, init };
+      })();
+    </script>
     <script src="./services.supabase.js"></script>
     <!-- OpenAI config -->
     <script>
