Update Supabase project URL and Anon Key to new project (odyoyoyvtclyfnichpdh)

--- a/orbitv7.html
+++ b/orbitv7.html
@@ -12,8 +12,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script>
       // Supabase Configuration (inline for Vercel compatibility)
-      window.SUPABASE_URL = 'https://cohjxujvdfbsohhlvnus.supabase.co';
-      window.SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNvaGp4dWp2ZGZic29oaGx2bnVzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQxNTAyNTcsImV4cCI6MjA3OTcyNjI1N30.FCmAi1McUKYV4y5tgBxKhY-Yku95JMu8-rtc2TJhdzs';
+      window.SUPABASE_URL = 'https://odyoyoyvtclyfnichpdh.supabase.co';
+      window.SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9keW95b3l2dGNseWZuaWNocGRoIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQxNTQ0MjMsImV4cCI6MjA3OTczMDQyM30.lnlLQbA_ZBmkQw7sW1a38SwgyOfBGEjlCnCk7JlSXyY';
       
       console.log('[Supabase Config] URL:', window.SUPABASE_URL);
       console.log('[Supabase Config] Has Key:', !!window.SUPABASE_ANON_KEY);
