--- a/test_supabase_connection.html
+++ b/test_supabase_connection.html
@@ -11,8 +11,8 @@
     <div id="results"></div>
 
     <script>
-        const SUPABASE_URL = 'https://cohjxujvdfbsohhlvnus.supabase.co';
-        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNvaGp4dWp2ZGZic29oaGx2bnVzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQxNTAyNTcsImV4cCI6MjA3OTcyNjI1N30.FCmAi1McUKYV4y5tgBxKhY-Yku95JMu8-rtc2TJhdzs';
+        const SUPABASE_URL = 'https://odyoyoyvtclyfnichpdh.supabase.co';
+        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9keW95b3l2dGNseWZuaWNocGRoIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQxNTQ0MjMsImV4cCI6MjA3OTczMDQyM30.lnlLQbA_ZBmkQw7sW1a38SwgyOfBGEjlCnCk7JlSXyY';
 
         const client = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
